[package]
name = "learning_grpc_rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
